@@ -113,18 +113,13 @@ public abstract class BaselineModuleJvmArgs implements Plugin<Project> {
         });
 
         project.getTasks().withType(Test.class).configureEach(test -> {
-            ModuleJvmArgsArgumentProvider provider = newModuleJvmArgsArgumentProvider(
-                    project, extension, project.files((Callable<FileCollection>) test::getClasspath), test.getName());
+            RuntimeArgumentProvider provider = newModuleJvmArgsArgumentProvider(test, test::getClasspath);
             test.getJvmArgumentProviders().add(provider);
             setTaskInputsFromExtension(test, extension);
         });
 
         project.getTasks().withType(JavaExec.class).configureEach(javaExec -> {
-            ModuleJvmArgsArgumentProvider provider = newModuleJvmArgsArgumentProvider(
-                    project,
-                    extension,
-                    project.files((Callable<FileCollection>) javaExec::getClasspath),
-                    javaExec.getName());
+            RuntimeArgumentProvider provider = newModuleJvmArgsArgumentProvider(javaExec, javaExec::getClasspath);
             javaExec.getJvmArgumentProviders().add(provider);
             setTaskInputsFromExtension(javaExec, extension);
         });
@@ -214,10 +209,9 @@ public abstract class BaselineModuleJvmArgs implements Plugin<Project> {
         //              *even if* we've specified them in forkOptions. Forking stops this from happening.
         javaCompile.getOptions().setFork(true);
 
-        CompilerForkArgsArgumentProvider forkOptionsArgProvider =
-                project.getObjects().newInstance(CompilerForkArgsArgumentProvider.class);
-        forkOptionsArgProvider.getProjectPath().set(project.getPath());
-        forkOptionsArgProvider.getTaskName().set(javaCompile.getName());
+        RuntimeArgumentProvider forkOptionsArgProvider =
+                project.getObjects().newInstance(RuntimeArgumentProvider.class);
+        forkOptionsArgProvider.getTaskPath().set(javaCompile.getPath());
         forkOptionsArgProvider
                 .getClasspath()
                 .from(project.files(
@@ -229,8 +223,7 @@ public abstract class BaselineModuleJvmArgs implements Plugin<Project> {
                 project.getObjects().newInstance(CompilerArgsArgumentProvider.class);
         compilerArgsProvider.getExports().set(extension.exports());
         compilerArgsProvider.getOpens().set(extension.opens());
-        compilerArgsProvider.getProjectPath().set(project.getPath());
-        compilerArgsProvider.getTaskName().set(javaCompile.getName());
+        compilerArgsProvider.getTaskPath().set(javaCompile.getPath());
         compilerArgsProvider.getBaselineJavaVersionEnabled().set(project.provider(() -> project.getPlugins()
                 .hasPlugin(BaselineJavaVersion.class)));
 
@@ -302,17 +295,22 @@ public abstract class BaselineModuleJvmArgs implements Plugin<Project> {
         }
     }
 
-    private static ModuleJvmArgsArgumentProvider newModuleJvmArgsArgumentProvider(
-            Project project,
-            BaselineModuleJvmArgsExtension extension,
-            ConfigurableFileCollection classpath,
-            String taskName) {
-        ModuleJvmArgsArgumentProvider provider = project.getObjects().newInstance(ModuleJvmArgsArgumentProvider.class);
+    /**
+     * @param classpathCallable The `getClasspath()` methods on many task types are not as lazy as you'd hope.
+     *                          Taking a Callable prevents the mistake of forcing the classpath too early.
+     */
+    private static RuntimeArgumentProvider newModuleJvmArgsArgumentProvider(
+            Task task, Callable<FileCollection> classpathCallable) {
+
+        BaselineModuleJvmArgsExtension extension =
+                task.getProject().getExtensions().getByType(BaselineModuleJvmArgsExtension.class);
+
+        RuntimeArgumentProvider provider = task.getProject().getObjects().newInstance(RuntimeArgumentProvider.class);
         provider.getExports().set(extension.exports());
         provider.getOpens().set(extension.opens());
-        provider.getClasspath().from(classpath);
-        provider.getProjectPath().set(project.getPath());
-        provider.getTaskName().set(taskName);
+        provider.getClasspath().from(task.getProject().files(classpathCallable));
+        provider.getTaskPath().set(task.getPath());
+
         return provider;
     }
 
@@ -406,8 +404,8 @@ public abstract class BaselineModuleJvmArgs implements Plugin<Project> {
         class Builder extends ImmutableJarManifestModuleInfo.Builder {}
     }
 
-    public abstract static class ModuleJvmArgsArgumentProvider implements CommandLineArgumentProvider {
-        private static final Logger log = Logging.getLogger(ModuleJvmArgsArgumentProvider.class);
+    public abstract static class RuntimeArgumentProvider implements CommandLineArgumentProvider {
+        private static final Logger log = Logging.getLogger(RuntimeArgumentProvider.class);
 
         @Internal
         public abstract SetProperty<String> getExports();
@@ -419,79 +417,30 @@ public abstract class BaselineModuleJvmArgs implements Plugin<Project> {
         public abstract ConfigurableFileCollection getClasspath();
 
         @Internal
-        public abstract Property<String> getProjectPath();
-
-        @Internal
-        public abstract Property<String> getTaskName();
+        public abstract Property<String> getTaskPath();
 
         @Override
         public final Iterable<String> asArguments() {
-            ImmutableList<JarManifestModuleInfo> classpathInfo = collectClasspathInfo(getClasspath());
+            List<JarManifestModuleInfo> classpathInfo = collectClasspathInfo(getClasspath());
             Stream<String> allExports = Stream.concat(
                     getExports().get().stream(), classpathInfo.stream().flatMap(info -> info.exports().stream()));
             Stream<String> allOpens = Stream.concat(
                     getOpens().get().stream(), classpathInfo.stream().flatMap(info -> info.opens().stream()));
 
-            ImmutableList<String> args = runtimeArgs(allExports, allOpens);
+            List<String> args = runtimeArgs(allExports, allOpens);
 
             log.debug(
-                    "BaselineModuleJvmArgs executing {} on project {} with exports: {}",
-                    getTaskName().getOrNull(),
-                    getProjectPath().getOrNull(),
+                    "BaselineModuleJvmArgs configuring {} with exports: {}",
+                    getTaskPath().get(),
                     args);
+
             return args;
         }
 
-        private static ImmutableList<String> runtimeArgs(Stream<String> allExports, Stream<String> allOpens) {
-            Stream<String> exportsArgs =
-                    allExports.distinct().sorted().flatMap(ModuleJvmArgsArgumentProvider::addExportArg);
-            Stream<String> opensArgs = allOpens.distinct().sorted().flatMap(ModuleJvmArgsArgumentProvider::addOpensArg);
-            return Stream.concat(exportsArgs, opensArgs).collect(ImmutableList.toImmutableList());
-        }
-
-        private static Stream<String> addExportArg(String modulePackagePair) {
-            return Stream.of("--add-exports", modulePackagePair + "=ALL-UNNAMED");
-        }
-
-        private static Stream<String> addOpensArg(String modulePackagePair) {
-            return Stream.of("--add-opens", modulePackagePair + "=ALL-UNNAMED");
-        }
-    }
-
-    public abstract static class CompilerForkArgsArgumentProvider implements CommandLineArgumentProvider {
-        private static final Logger log = Logging.getLogger(ModuleJvmArgsArgumentProvider.class);
-
-        @Internal
-        public abstract ConfigurableFileCollection getClasspath();
-
-        @Internal
-        public abstract Property<String> getProjectPath();
-
-        @Internal
-        public abstract Property<String> getTaskName();
-
-        @Override
-        public final Iterable<String> asArguments() {
-            ImmutableList<JarManifestModuleInfo> classpathInfo = collectClasspathInfo(getClasspath());
-            Stream<String> allExports = classpathInfo.stream().flatMap(info -> info.exports().stream());
-            Stream<String> allOpens = classpathInfo.stream().flatMap(info -> info.opens().stream());
-
-            ImmutableList<String> args = runtimeArgs(allExports, allOpens);
-
-            log.debug(
-                    "BaselineModuleJvmArgs executing {} on project {} with exports: {}",
-                    getTaskName().getOrNull(),
-                    getProjectPath().getOrNull(),
-                    args);
-            return args;
-        }
-
-        private static ImmutableList<String> runtimeArgs(Stream<String> allExports, Stream<String> allOpens) {
-            Stream<String> exportsArgs =
-                    allExports.distinct().sorted().flatMap(CompilerForkArgsArgumentProvider::addExportArg);
-            Stream<String> opensArgs =
-                    allOpens.distinct().sorted().flatMap(CompilerForkArgsArgumentProvider::addOpensArg);
-            return Stream.concat(exportsArgs, opensArgs).collect(ImmutableList.toImmutableList());
+        private static List<String> runtimeArgs(Stream<String> allExports, Stream<String> allOpens) {
+            Stream<String> exportsArgs = allExports.distinct().sorted().flatMap(RuntimeArgumentProvider::addExportArg);
+            Stream<String> opensArgs = allOpens.distinct().sorted().flatMap(RuntimeArgumentProvider::addOpensArg);
+            return Stream.concat(exportsArgs, opensArgs).toList();
         }
 
         private static Stream<String> addExportArg(String modulePackagePair) {
@@ -504,7 +453,7 @@ public abstract class BaselineModuleJvmArgs implements Plugin<Project> {
     }
 
     public abstract static class CompilerArgsArgumentProvider implements CommandLineArgumentProvider {
-        private static final Logger log = Logging.getLogger(ModuleJvmArgsArgumentProvider.class);
+        private static final Logger log = Logging.getLogger(RuntimeArgumentProvider.class);
 
         @Internal
         public abstract SetProperty<String> getExports();
@@ -513,13 +462,10 @@ public abstract class BaselineModuleJvmArgs implements Plugin<Project> {
         public abstract SetProperty<String> getOpens();
 
         @Internal
-        public abstract Property<String> getProjectPath();
-
-        @Internal
         public abstract Property<Boolean> getBaselineJavaVersionEnabled();
 
         @Internal
-        public abstract Property<String> getTaskName();
+        public abstract Property<String> getTaskPath();
 
         @Override
         public final Iterable<String> asArguments() {
@@ -528,29 +474,26 @@ public abstract class BaselineModuleJvmArgs implements Plugin<Project> {
 
             if (!isBaselineJavaVersionEnabled) {
                 log.debug(
-                        "BaselineModuleJvmArgs not applying args to compilation task {} on project {} due to lack of "
+                        "BaselineModuleJvmArgs not applying args to compilation task {} due to lack of "
                                 + "BaselineJavaVersion",
-                        getTaskName().get(),
-                        getProjectPath().get());
+                        getTaskPath().get());
                 return ImmutableList.of();
             }
 
-            ImmutableList<String> args = compilationArgs(getExports().get().stream(), getOpens().get().stream());
-
-            log.debug(
-                    "BaselineModuleJvmArgs executing {} on project {} with exports: {}",
-                    getTaskName().getOrNull(),
-                    getProjectPath().getOrNull(),
-                    args);
-            return args;
-        }
-
-        private static ImmutableList<String> compilationArgs(Stream<String> allExports, Stream<String> allOpens) {
-            return Stream.concat(allExports, allOpens)
+            // For compilation, `--add-opens` does nothing at all. Instead, each of the `opens` needs to
+            // become an export for compilation to work
+            List<String> args = Stream.concat(getExports().get().stream(), getOpens().get().stream())
                     .distinct()
                     .sorted()
                     .flatMap(CompilerArgsArgumentProvider::addExportArg)
-                    .collect(ImmutableList.toImmutableList());
+                    .toList();
+
+            log.debug(
+                    "BaselineModuleJvmArgs configuring {} with exports: {}",
+                    getTaskPath().get(),
+                    args);
+
+            return args;
         }
 
         private static Stream<String> addExportArg(String modulePackagePair) {
